# codex-python-sdk

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build.sh  demo_smoke.py  playground.py  pyproject.toml  uv-sync.sh
.github/workflows/: ci.yml
codex_python_sdk/: __init__.py  _shared.py  async_client.py  errors.py  factory.py  policy.py  renderer.py  sync_client.py  types.py
codex_python_sdk/examples/: demo_smoke.py
docs/: api.md  app_server.md  config.md  core_mechanism.md  policy.md  tutorial.md
docs/zh/: api.md  app_server.md  config.md  core_mechanism.md  policy.md  tutorial.md
tests/: test_codex_python_sdk.py  test_integration_real.py  test_policy_engine.py  test_renderer.py  test_shared.py
